<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_layout_item1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/layout_menu1"/>
        <item
            android:id="@+id/nav_layout_item2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/layout_menu2"/>
        <item
            android:id="@+id/nav_layout_item3"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/layout_menu3"/>
        <item
            android:id="@+id/nav_layout_item4"
            android:icon="@drawable/icon_home"
            android:title="@string/layout_menu4"/>
    </group>

    <item android:title="@string/layout_menu5">
        <menu>
            <item
                android:id="@+id/nav_layout_item5"
                android:icon="@drawable/icon_exit"
                android:title="@string/layout_menu6"/>
        </menu>
    </item>

</menu>